fix tests to make them pass

--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -13,11 +13,8 @@
   <%= f.label :state %>
   <%= f.text_field :state %>
 
-  <%= f.label :zip_code %>
+  <%= f.label "zip code" %>
   <%= f.text_field :zip_code %>
-
-  <%= f.label :pitch %>
-  <%= f.text_field :pitch%>
 
   <%= f.submit %>
 <% end %>
