--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -22,3 +22,15 @@
 <%= "#{@application.progress}"  %>
 
 <br>
+
+<%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
+  <%= f.label :add_pet %>
+  <%= f.text_field :add_pet %>
+  <%= f.submit "Search" %>
+<% end %>
+
+
+<br>
+<% @pets.each do |pet| %>
+  <%= pet.name %><br>
+<% end %>
